src/test/resources/typeSystemTestModels/invalid/expressions/BooleanNot.java
package typeSystemTestModels.invalid.expressions;

public class BooleanNot {
  float l = 1;
  boolean c = ~l;
}